@@ -583,9 +583,6 @@ int	MAIN_ZABBIX_ENTRY()
 	init_perf_collector(1);
 	load_perf_counters(CONFIG_PERF_COUNTERS);
 #endif
-	load_user_parameters(CONFIG_USER_PARAMETERS);
-	load_aliases(CONFIG_ALIASES);
-
 	zbx_free_config();
 
 	/* --- START THREADS ---*/
@@ -830,6 +827,8 @@ int	main(int argc, char **argv)
 			break;
 		default:
 			zbx_load_config(ZBX_CFG_FILE_REQUIRED);
+			load_user_parameters(CONFIG_USER_PARAMETERS);
+			load_aliases(CONFIG_ALIASES);
 			break;
 	}
 
